--- a/minsweepapp/templates/gamepage.html
+++ b/minsweepapp/templates/gamepage.html
@@ -5,11 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Show Mine</title>
 </head>
 <body>
 
-    <h1>MineSweer</h1>
+    <h1>MineSweeper</h1>
     <table border="1">
         {%for i in display_data%}
         
@@ -18,9 +20,17 @@
             <td bgcolor="{{hidden_data|index:forloop.parentloop.counter0|index:forloop.counter0|clicked}}">
                 <form action="playgame" method="POST" >
                 {%csrf_token%}
+                {%if not message%}
                 <input type="hidden" name="key" value="{{forloop.parentloop.counter0}}&nbsp;{{forloop.counter0}}">
+                {%endif%}
+
                 {%if j%} 
-                <input type="submit" value="{{j|flagshow}}"style="color:{{j|customcolor}}">
+
+                <button type="submit" class="btn btn-success" style="color:{{j|customcolor}}">
+                    <i class="{{j|flagshow}}" ></i> {{j|show}}
+                </button>
+
+                <!-- <input type="submit" value="{{j|flagshow}}"style="color:{{j|customcolor}}"> -->
                 {%else%}
                 <input type="submit" value="">
                 {%endif%}
@@ -32,8 +42,12 @@
         
     </table>
 
+    {%if message%}
+    <h2>{{message}}</h2>
+    {%endif%}
+
     <br>
-    <a href="/">home</a>
+    <a href="/" style="text-decoration: none;"><button>Home</button></a>
     
 </body>
 </html>
