--- a/minsweepapp/templates/home.html
+++ b/minsweepapp/templates/home.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    
     <title>MineSweeper</title>
 </head>
 <body>
@@ -25,9 +26,23 @@
             <tr>
                 <td> <input type="submit" value="Submit"> <br></td>
             </tr>
+
+            <tr>
+                <td> <button type="submit" formaction="placebombrandom">Place random Bomb</button></td>
+            </tr>
+
+
+           
         </table>
+
     
 
     </form>
+
+        
+
+     
+
+   
 </body>
 </html>
